<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cgbg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/goback"
                        android:background="@drawable/back"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="2"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <EditText
                        android:id="@+id/search_et"
                        android:background="@null"
                        android:layout_weight="1"
                        android:textSize="14sp"
                        android:singleLine="true"
                        android:imeOptions="actionSearch"
                        android:hint="@string/search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/gosearch"
                        android:text="@string/gosearch"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="13"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/zonghe"
                android:gravity="center"
                android:id="@+id/zonghe"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:background="#3afdfdfd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/price"
                android:text="@string/price"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="#3afdfdfd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/sales"
                android:text="@string/sales"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:background="#3afdfdfd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
<!--
        <com.youth.banner.Banner
            android:layout_weight="3"
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
-->
        <com.cateringpartner.cyhb.RefreshRecyclerView
            android:layout_weight="1"
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
