<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cgbg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_weight="15"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_weight="7"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <ScrollView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_weight="7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:src="@drawable/ic_add_location_black_24dp"
                            android:layout_width="match_parent"
                            android:layout_margin="6dp"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <LinearLayout
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/revperson"
                                    android:textSize="20dp"
                                    android:layout_weight="1"
                                    android:gravity="left|center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                                <TextView
                                    android:id="@+id/phone"
                                    android:textSize="16dp"
                                    android:layout_weight="1"
                                    android:gravity="right|center"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/address"
                                android:layout_weight="1"
                                android:gravity="left|center"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_weight="10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    android:background="@color/gray"
                    android:layout_width="match_parent"
                    android:layout_height="1dp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/basketid"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:layout_marginLeft="20dp"
                        android:text="订单ID:"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/totalprice"
                        android:textColor="@color/red"
                        android:gravity="right|center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:layout_marginLeft="20dp"
                        android:text="商品评价"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/refund"
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:background="@color/banner"
                            android:layout_marginRight="20dp"
                            android:gravity="center"
                            android:layout_gravity="center|right"
                            android:text="退款" />
                    </LinearLayout>

                </LinearLayout>
                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/ratingbar"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    style="@style/Widget.MaterialRatingBar.RatingBar" />
                <TextView
                    android:id="@+id/commentimg"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:background="@color/banner"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="上传图片" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:background="@drawable/cardstyle"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_margin="20dp"
                    android:layout_height="200dp">
                    <EditText
                        android:id="@+id/commentcontent"
                        android:textSize="16dp"
                        android:background="@null"
                        android:layout_margin="5dp"
                        android:hint="@string/maxword"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:gravity="top"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/confirm"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:background="@color/gray"
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/comment"
            android:layout_weight="1"
            android:text="@string/comment"
            android:gravity="center"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
